--- a/streamserv/templates/index.html
+++ b/streamserv/templates/index.html
@@ -1,9 +1,35 @@
 <html>
-  <head>
-    <title>Video Streaming Demonstration</title>
-  </head>
-  <body>
-    <h1>Video Streaming Demonstration</h1>
-    <img id="bg" src="{{ url_for('video_feed') }}">
-  </body>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<head>
+<body>
+<img id="img" style="width: 300px" src="https://s3.amazonaws.com/panoramik-ccny/360_stream/stream.jpg"></img>
+<div id="div" style="width: 300px"></div>
+<script>
+
+setInterval(function() {
+    var xhr = new XMLHttpRequest();
+    xhr.onreadystatechange = function(){
+      if (this.readyState == 4 && this.status == 200){
+          console.log(this.response, typeof this.response);
+          var img = document.createElement('img');
+          var url = window.URL || window.webkitURL;
+          img.src = url.createObjectURL(this.response);
+          img.style.width = 300;
+          img.id = "img";
+          var div = document.getElementById('div');
+          $("#img").remove();
+          $("#div").append(img);
+        }
+    }
+
+    xhr.open('GET', 'https://s3.amazonaws.com/panoramik-ccny/360_stream/stream.jpg');
+    xhr.responseType = 'blob';
+    xhr.send();  
+}, 2000);
+
+
+</script>
+<body>
+
 </html>
